--- a/source/features/transactions/components/TransactionInfo.module.scss
+++ b/source/features/transactions/components/TransactionInfo.module.scss
@@ -84,6 +84,10 @@ $medium-breakpoint: 780px;
           font-weight: 600;
           letter-spacing: 0.6px;
           line-height: 1.33;
+
+          @media (max-width: $medium-breakpoint) {
+            word-break: break-all;
+          }
         }
 
         .linkedId {
